<resources>
    <string name="app_name">Walk The Past</string>
    <string name="background_description">The background image</string>

    ////// ADMIN EMAIL LIST //////
    <string name="admin1">admin@admin.com</string>

    ////// PROGRAM ACTIONS //////
    <string name="action_back">Back</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_next">Next</string>
    <string name="action_resend_code">Resend Code</string>
    <string name="action_start">Start</string>

    //////  DATABASE FILEPATHS //////
    <string name="path_points_of_interest">PointsOfInterest</string>
    <string name="path_users">Users</string>

    ////// DATABASE FIELDS //////
    <string name="db_poi_approved">approved</string>
    <string name="db_poi_desc">description</string>
    <string name="db_poi_image">image</string>
    <string name="db_poi_loc">location</string>
    <string name="db_poi_title">title</string>

    <string name="db_users_admin">admin</string>
    <string name="db_users_email">email</string>
    <string name="db_users_name">username</string>
    <string name="db_users_visited">visited</string>

    ////// START MENU //////
    <string name="user_existing">Are you an existing user?</string>
    <string name="login">Login</string>
    <string name="user_new">Are you a new user?</string>
    <string name="register">Create an Account</string>

    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_show">Show Password</string>

    ////// LOGIN //////
    <string name="login_forgotten">Forgotten your login details?</string>
    <string name="login_remember">Remember me</string>

    <string name="login_missing">Please fill in all text fields</string>
    <string name="login_failure">One or more of your account details were incorrect</string>

    ////// LOGIN RESET //////
    <string name="login_reset_prompt">Enter your email address. We will send you a one-time use code
        which will be used to verify that you are the one updating the login details of this account.</string>
    <string name="login_reset_code_prompt">Enter the one-time use code you received, via the email
        address you previously provided. If you have not received one, either re-enter your email
        address or press resend code and we will send you another one.</string>
    <string name="code_enter">Enter One-Time-Use Code</string>

    ////// REGISTRATION //////
    <string name="password_confirm">Confirm Password</string>
    <string name="password_new">New Password</string>
    <string name="account_create">Create Account</string>

    <string name="register_empty_field">Please fill in all fields</string>
    <string name="register_invalid_username">"Please enter a username between 3 and 12 characters"</string>
    <string name="register_invalid_email">Please enter a valid email address</string>
    <string name="register_too_short">Please make your password at lease 8 characters long</string>
    <string name="register_no_match">Please make sure "confirm Password" matches "Password"</string>
    <string name="register_already_exists">This email has been used to create an account before</string>

    ////// MAIN MENU //////
    <string name="trails">Trails</string>
    <string name="pois">Points Of Interest</string>
    <string name="map">map</string>

    ////// TRAILS //////
    <string name="trail_historical">Historical</string>
    <string name="trail_entertaining">Entertaining</string>
    <string name="trail_adventurous">Adventurous</string>

    ////// MAP //////
    <string name="map_curr_location">Current Location</string>
    <string name="map_loc_switch">Location Switch</string>
    <string name="map_cofo">Computational Foundry</string>

    ////// SETTINGS //////
    <string name="pois_visited">Locations Visited: </string>
    <string name="password_reset">Reset Password</string>

    ////// TOOLBAR //////
    <string name="xml_logout">LogOut</string>
    <string name="xml_refresh">Refresh</string>
    <string name="xml_profile">Profile</string>
    <string name="xml_linked">Linked Accounts</string>
    <string name="xml_settings">Settings</string>


    ////// LOG TAGS //////
    <string name="log_main">Main.Info</string>
    <string name="log_login">Login.Info</string>
    <string name="log_register">Register.Info</string>
    <string name="log_points_of_interest">PointsOfInterest.Info</string>
    <string name="log_map">Map.Info</string>
    <string name="log_map_loc">LocLatLocation</string>
    <string name="log_settings">Settings.Info</string>

    ////// STATUS TAGS //////
    <string name="log_created">in onCreate</string>
    <string name="log_started">in onStart</string>
    <string name="log_resume">in onResume</string>
    <string name="log_pause">in onPause</string>
    <string name="log_stop">in onStop</string>
    <string name="log_destroy">in onDestroy</string>
    <string name="log_restart">in onRestart</string>

    ////// LOGS //////
    <string name="log_user">User </string>
    <string name="log_current_login"> currently logged in</string>
    <string name="log_login_success">signInWithEmail:Success</string>
    <string name="log_login_failure">signInWithEmail:failure</string>
    <string name="log_register_user_success">DocumentSnapshot added with ID: </string>
    <string name="log_register_user_failure">Error adding document: </string>
    <string name="log_register_success">createUserWithEmail:success</string>
    <string name="log_register_failure">createUserWithEmail:failure</string>
    <string name="log_return">return</string>
    <string name="log_document_error">Error getting documents</string>

    ////// ERROR MESSAGES //////
    <string name="err_kitten">https://images6.fanpop.com/image/photos/34300000/Kitten-cats-34352405-1600-1200.jpg</string>
    <string name="err_user_not_found">User Not Found</string>
</resources>