<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainMenuToolBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainTrailsViewBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:onClick="goToViewTrailsActivity"
        android:text="@string/trails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuToolBar" />

    <Button
        android:id="@+id/mainMenuMapBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:onClick="goToMap"
        android:text="@string/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTrailsViewBtn" />

    <Button
        android:id="@+id/poisBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:onClick="goToPointsOfInterestActivity"
        android:text="@string/pois"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuMapBtn" />

    <Button
        android:id="@+id/mainMenuSettingsBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:onClick="goToSettings"
        android:text="@string/xml_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poisBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>