<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/resetLoginCodeDescriptionTxt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/login_reset_code_prompt"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/resetLoginCodeEmailTxtBx"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/code_enter"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetLoginCodeDescriptionTxt" />

    <Button
        android:id="@+id/resetLoginCodeNextBtn"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:onClick="goToMainMenuActivity"
        android:text="@string/action_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetLoginCodeEmailTxtBx" />

    <Button
        android:id="@+id/resetLoginCodeResendBtn"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/action_resend_code"
        app:layout_constraintEnd_toStartOf="@+id/resetLoginNextBtn"
        app:layout_constraintHorizontal_bias="0.693"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetLoginCodeEmailTxtBx" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/resetLoginCodeToolBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>